# GenerativeArt

./: .gitignore
fractals/: drive_link.txt
fractals/julia/: CMakeLists.txt  Makefile  README.md  compile_commands.json
fractals/julia/include/: EBO.hpp  VAO.hpp  VBO.hpp  julia.hpp  shader.hpp
fractals/julia/shaders/: bonito.frag  shader.frag
fractals/julia/src/: animation.cpp  main.cpp  shader.cpp
fractals/mandelbrot/: Makefile  README.md
fractals/mandelbrot/include/: EBO.hpp  shader.hpp
fractals/mandelbrot/shaders/: bonito.frag  shader.frag  shader.vert
fractals/mandelbrot/src/: EBO.cpp  VAO.cpp  VBO.cpp  main.cpp  shader.cpp
fractals/newton/: Makefile
projeto/: Makefile  height.fs  height.vs  main
projeto/src/: glad.c  main.cpp  teste.cpp
semana1/src/: main.cpp
